# pi-fan

./: .gitignore  Cargo.toml  LICENSE  README.md
res/: config.toml
src/: main.rs
