[package]
name = "pi-fan"
authors = ["Michael Rivnak <rivnakm1@gmail.com>"]
version = "0.1.0"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"